week_3: 4. messaging
